--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Comunicándose con una API OAuth2</title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/custom.css"> 
+    <link rel="stylesheet" href="css/custom.css">
+    <link rel="icon" type="image/png" href="images/icon_cb0bddc80dd6c986e16811cd76f2d1b6.ico"> 
 </head>
 <body>
     <header>
