--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/custom.css">
-    <link rel="icon" type="image/png" href="images/icon_cb0bddc80dd6c986e16811cd76f2d1b6.ico"> 
+    <link rel="icon" type="image/png" href="images/user-svgrepo-com.svg"> 
 </head>
 <body>
     <header>
